--- a/secciones/cursos.html
+++ b/secciones/cursos.html
@@ -4,80 +4,95 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=h1, initial-scale=1.0">
-    <link rel="stylesheet" href="../estilos/estilos.css">
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Exa:wght@300&display=swap" rel="stylesheet">
     <!-- google fonts -->
-    <title>PROYECTO ENTREGABLE 1</title>
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <!-- fin bootstrap -->
+    <link rel="stylesheet" href="../estilos/estilos.css">
+    <title>Tesla café</title>
 </head>
 <body>
-    <header class= "header">
-        <div>
-            <a href="../index.html">
-            <h1>Tesla Café</h1>
-            </a>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+                <header class= "header">
+                    <div>
+                        <a href="../index.html">
+                        <h1>Tesla Café</h1>
+                        </a>
+                    </div>
+            </div>
+
+            <div class="col-12">        
+                    <nav class="nav">
+                        <ul>
+                            <li><a href="../index.html">INICIO</a></li>
+                            <li><a href="productos.html">PRODUCTOS</a></li>
+                            <li><a href="contacto.html">CONTACTO</a></li>
+                            <li><a href="nosotros.html">NOSOTROS</a></li>
+                            <li><a href="cursos.html">CURSOS</a></li>
+                        </ul>
+                    </nav>
+                </header>
+            </div>
         </div>
-        <nav class="nav">
-            <ul>
-                <li><a href="../index.html">INICIO</a></li>
-                <li><a href="productos.html">PRODUCTOS</a></li>
-                <li><a href="contacto.html">CONTACTO</a></li>
-                <li><a href="nosotros.html">NOSOTROS</a></li>
-                <li><a href="cursos.html">CURSOS</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main class="main__cursos">
-                <section class="main__cursos__card">
-                    <div class="main__cursos__card__img">
-                    </div>
-                    <div class="main__cursos__card__titulo">
-                        <h3>Curso</h3>
-                    </div>
-                </section>
-                <section class="main__cursos__card">
-                    <div class="main__cursos__card__img">
-                    </div>
-                    <div class="main__cursos__card__titulo">
-                        <h3>Curso</h3>
-                    </div>
-                </section>
-                <section class="main__cursos__card">
-                    <div class="main__cursos__card__img">
-                    </div>
-                    <div class="main__cursos__card__titulo">
-                        <h3>Curso</h3>
-                    </div>
-                </section>
-            </main>
-    <footer class="footer">
-        <div class="footer__item">
-            <h3>medios de pago</h3>
-            <ul>
-                <li>medio de pago 1</li>
-                <li>medio de pago 2</li>
-                <li>medio de pago 3</li>
-                <li>medio de pago 4</li>
-            </ul>
+
+        <div class="row">
+            <div class="col-12">
+                <main class="main__cursos">
+                    <section class="main__cursos__card">
+                        <div class="main__cursos__card__img">
+                        </div>
+                        <div class="main__cursos__card__titulo">
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi possimus voluptates, nostrum vitae dolorem itaque assumenda aliquid ex nesciunt, dolorum perferendis! Error molestias consequatur, voluptas a eaque earum dolorum sequi!</p>
+                        </div>
+                        <div>
+                            <button class="btn btn-primary productosBoton" type="submit">Comprar</button>
+                        </div>
+                    </section>
+                </main>
+            </div>
         </div>
-        <div class="footer__item">
-            <h3>contacto</h3>
-            <ul>
-                <li>correo@mail.com</li>
-                <li>+543516554433</li>
-            </ul>
+
+        <div class="row">
+            <div class="col-12">
+                <footer class="footer">
+                    <div class="footer__item col-4">
+                        <h3>medios de pago</h3>
+                        <ul>
+                            <li>medio de pago 1</li>
+                            <li>medio de pago 2</li>
+                            <li>medio de pago 3</li>
+                        </ul>
+                    </div>
+                    <div class="footer__item col-4">
+                        <h3>contacto</h3>
+                        <ul>
+                            <li>correo@mail.com</li>
+                            <li>+543516554433</li>
+                        </ul>
+                    </div>
+                    <div class="footer__item col-4">
+                        <h3>redes</h3>
+                        <ul>
+                            <li><a href="https://es-la.facebook.com/">Facebook</a></li>
+                            <li><a href="https://www.instagram.com/">Instagram</a></li>
+                            <li><a href="https://www.youtube.com/">Youtube</a></li>
+                        </ul>
+                    </div>
+                </footer>
+            </div>
         </div>
-        <div class="footer__item">
-            <h3>redes</h3>
-            <ul>
-                <li><a href="https://es-la.facebook.com/">Facebook</a></li>
-                <li><a href="https://www.instagram.com/">Instagram</a></li>
-                <li><a href="https://www.youtube.com/">Youtube</a></li>
-            </ul>
-        </div>
-    </footer>
+    </div>
+<!-- bootstrap -->
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+<!-- fin bootstrap -->
     
 </body>
 </html>
