--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -14,6 +14,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <!-- fin bootstrap -->
     <link rel="stylesheet" href="../estilos/estilos.css">
+    <!-- animate.css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!-- fin animate.css -->
     <title>PROYECTO ENTREGABLE 1</title>
 </head>
 <body>
@@ -23,7 +26,7 @@
                 <header class= "header">
                     <div>
                         <a href="../index.html">
-                        <h1>Tesla Café</h1>
+                            <h1 class="animate__animated animate__slideInDown">Tesla Café</h1>
                         </a>
                     </div>
             </div>
@@ -73,22 +76,22 @@
         <div class="row">
             <div class="col-12">
                 <footer class="footer">
-                    <div class="footer__item col-4">
+                    <div class="footer__item">
                         <h3>medios de pago</h3>
                         <ul>
-                            <li>medio de pago 1</li>
-                            <li>medio de pago 2</li>
-                            <li>medio de pago 3</li>
+                            <li>pago 1</li>
+                            <li>pago 2</li>
+                            <li>pago 3</li>
                         </ul>
                     </div>
-                    <div class="footer__item col-4">
+                    <div class="footer__item">
                         <h3>contacto</h3>
                         <ul>
                             <li>correo@mail.com</li>
                             <li>+543516554433</li>
                         </ul>
                     </div>
-                    <div class="footer__item col-4">
+                    <div class="footer__item">
                         <h3>redes</h3>
                         <ul>
                             <li><a href="https://es-la.facebook.com/">Facebook</a></li>
