--- a/secciones/cursos.html
+++ b/secciones/cursos.html
@@ -14,6 +14,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <!-- fin bootstrap -->
     <link rel="stylesheet" href="../estilos/estilos.css">
+    <!-- animate.css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!-- fin animate.css -->
     <title>Tesla café</title>
 </head>
 <body>
@@ -23,7 +26,7 @@
                 <header class= "header">
                     <div>
                         <a href="../index.html">
-                        <h1>Tesla Café</h1>
+                        <h1 class="animate__animated animate__slideInDown">Tesla Café</h1>
                         </a>
                     </div>
             </div>
@@ -47,12 +50,13 @@
                 <main class="main__cursos">
                     <section class="main__cursos__card">
                         <div class="main__cursos__card__img">
+                            <img src="../imagenes/baristaxxS.jpg" alt="">
                         </div>
-                        <div class="main__cursos__card__titulo">
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi possimus voluptates, nostrum vitae dolorem itaque assumenda aliquid ex nesciunt, dolorum perferendis! Error molestias consequatur, voluptas a eaque earum dolorum sequi!</p>
+                        <div class="main__cursos__card">
+                            <p>En este curso el alumno podrá aprender todo lo relacionado con el manejo de la barra de café, calibrado de maquinarias y utensilios como así también el reconocimiento de materias primas, extracción del café, molienda y técnicas de filtrado. Por otro parte se brindaran amplios conocimientos del café y su combinación con el agua y leche, para lograr un buen arte latte e infusiones en frio y caliente.</p>
                         </div>
-                        <div>
-                            <button class="btn btn-primary productosBoton" type="submit">Comprar</button>
+                        <div class="contBoton">
+                            <button class="btn btn-primary comprarBoton" type="submit">Comprar</button>
                         </div>
                     </section>
                 </main>
@@ -62,22 +66,22 @@
         <div class="row">
             <div class="col-12">
                 <footer class="footer">
-                    <div class="footer__item col-4">
+                    <div class="footer__item">
                         <h3>medios de pago</h3>
                         <ul>
-                            <li>medio de pago 1</li>
-                            <li>medio de pago 2</li>
-                            <li>medio de pago 3</li>
+                            <li>pago 1</li>
+                            <li>pago 2</li>
+                            <li>pago 3</li>
                         </ul>
                     </div>
-                    <div class="footer__item col-4">
+                    <div class="footer__item">
                         <h3>contacto</h3>
                         <ul>
                             <li>correo@mail.com</li>
                             <li>+543516554433</li>
                         </ul>
                     </div>
-                    <div class="footer__item col-4">
+                    <div class="footer__item">
                         <h3>redes</h3>
                         <ul>
                             <li><a href="https://es-la.facebook.com/">Facebook</a></li>
